got the website broken, don't use this branch anymore

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "browsify": "0.0.4",
     "core-js": "^2.0.0",
     "jquery": "^2.2.1",
+    "mtwitter": "^1.6.4",
     "normalize.css": "^3.0.3",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
